Refactor period handling and enhance consumption/statistics logic
Introduced `Period` and `PeriodType` abstractions to standardize period handling. Refactored `Consumption` and `Statistics` classes to support generic period types, enhancing clarity and code reuse. Modified related classes and methods to align with the new period framework.